# bci4als

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  EEG.xdf  HISTORY.rst  LICENSE  MI.py  MI1_training.py  MI2_preprocess.py  Makefile  README.md  README.rst  SSVEP1.py  SSVEP2.py  example.xdf  exp_example.xdf  filters.py  main.py  requirements.txt  setup.cfg  setup.py  simulate_EEG.py  simulate_EEG_stream.py  simulate_markers_stream.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
MI/: MI1_record_experiment.py  MI1_training.py  MI2_preprocess.py  MI3_segment_data.py  MI4_extract_features.py  MI5_learn_model.py  MI6_test.py  brainflow_example.py  config.py  config.yaml  extract_features.py  main.py  play_zone.py  preprocess.py  test.py  test_model.py  train.py  train_test_split.py
Recycle Bin/: gui.py  realdata.py  resnet.py  sub-P001_ses-S001_task-Default_run-001_eeg.xdf  temp.py  transfer_learning_I.py  uselsl.py
SSVEP/: SSVEP1.py
bci_4_als/: __init__.py  cli.py
bci_4_als/MI/: config.yaml  record_experiment.py  segment_data.py
data/arielle/: stimulus_vectors.csv
data/evyatar/1/: stimulus_vectors.csv
data/evyatar/2/: EEG.xdf
data/eytan/1/: stimulus_vectors.csv
data/noam/2/: stimulus_vectors.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: conf.py  index.rst
examples/: Report.ipynb  config.py  control_mouse.py  csp_lda.py  evyatar_script.py  ex1_pipeline.py  figures.py  init_learning.py  lsl_example.py  main.py  markers.xdf  myscript.py  offline_training.py  online_training.py  onlinereport.py  pipeline.ipynb  project_structure_2.txt  record_eeg_data.py  results_cnn.csv  test_psychopy.py  trials.pickle  xdf_to_py.py
examples/.ipynb_checkpoints/: explore_recording-checkpoint.ipynb  pipeline-checkpoint.ipynb
examples/Record_1/: EEG_chans.mat  EEG_events.mat  MIData.mat
examples/adi_eden_records/: Sub2011001.pkl  Sub2111001.pkl  Sub2211001.pkl
examples/board_data/: data.pickle
examples/brainflow code samples/: get_data.py
examples/models/: SGD_model.pkl
examples/notebooks/: csp_lda.ipynb
examples/pynput examples/: control_google_earth.py  ex1_basic_control.py
notebooks/: figures.py  main.ipynb  pipeline.ipynb
notebooks/explore_recording/: main.ipynb  stimulus_vectors.csv  sub-P001_ses-S001_task-Default_run-001_eeg_old3.xdf
recordings/: RECORDINGS - README.txt
recycle bin/: annotations.csv  realdata.py  resnet.ipynb  resnet.py
recycle bin/realdata/: rd_stimulus_vector.csv
recycle bin/semester A report/: project_structure_0.txt  project_structure_1.txt  project_structure_3.txt  results.csv
scripts/: csp_lda.py  main.py
scripts/control_mouse/: config.py  control_mouse.py
scripts/notebooks/: csp_lda.ipynb
simulation/: simulate_EEG_stream.py  simulate_markers_stream.py
src/: __init__.py
src/bci4als/: __init__.py  dashboard.py  eeg.py  experiment.py  feedback.py  ml_model.py  mouse.py  offline.py  online.py
src/bci_4_als/: cli.py
tests/: __init__.py  test_bci_4_als.py
(+156 files in other folders)
