[metadata]
name = bci4als
version = 0.1
license = MIT
description = A complete EEG Motor Imagery Classification pipeline
long_description = file: README.md
author = Evyatar Luvaton, Noam Siegel
author_email = luvaton@post.bgu.ac.il
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: BCI Developers
   Topic :: Software Development :: BCI Tools
   Programming Language :: Python :: 2
   Programming Language :: Python :: 2.6
   Programming Language :: Python :: 2.7
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.2
   Programming Language :: Python :: 3.3
   Programming Language :: Python :: 3.4
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   sklearn
   mne
   mne-features
   psychopy
   pyyaml
   pyxdf


[options.packages.find]
where=src

from setuptools import setup, find_packages

with open('README.md') as readme_file:
    readme = readme_file.read()

with open('HISTORY.rst') as history_file:
    history = history_file.read()

requirements = ['Click>=7.0', ]

setup_requirements = ['pytest-runner', ]

test_requirements = ['pytest>=3', ]

setup(

    description="Python Boilerplate contains all the boilerplate you need to create a Python package.",
    entry_points={
        'console_scripts': [
            'bci_4_als=bci_4_als.cli:main',
        ],
    },
    install_requires=requirements,
    license="MIT license",
    long_description=readme + '\n\n' + history,
    include_package_data=True,
    keywords='bci_4_als',
    name='bci_4_als',
    packages=find_packages(include=['bci_4_als', 'bci_4_als.*']),
    setup_requires=setup_requirements,
    test_suite='tests',
    tests_require=test_requirements,
    url='https://github.com/evyatarluv/bci_4_als',
    version='0.1.0',
    zip_safe=False,
)
