[metadata]
name = bci4als
version = 0.1.2
license = MIT
description = A complete EEG Motor Imagery Classification pipeline
author = Evyatar Luvaton, Noam Siegel
author_email = luvaton@post.bgu.ac.il
classifiers=
   Development Status :: 3 - Alpha
   Intended Audience :: BCI Developers
   Topic :: Software Development :: BCI Tools
   Programming Language :: Python :: 2
   Programming Language :: Python :: 2.6
   Programming Language :: Python :: 2.7
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.2
   Programming Language :: Python :: 3.3
   Programming Language :: Python :: 3.4

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   sklearn
   mne
   mne-features
   psychopy


[options.packages.find]
where=src


with open('README.md') as readme_file:
    readme = readme_file.read()

with open('HISTORY.rst') as history_file:
    history = history_file.read()

requirements = ['Click>=7.0', ]

setup_requirements = ['pytest-runner', ]

test_requirements = ['pytest>=3', ]
